完善优惠卷逻辑
